[gd_scene load_steps=4 format=3 uid="uid://m7ga8fw8mglx"]

[ext_resource type="Script" uid="uid://dhl66mv532h42" path="res://player_cursors/enchantment_layout_cursor.gd" id="1_ip4lv"]
[ext_resource type="Texture2D" uid="uid://demlxksncxsip" path="res://placeholder_assets/grab_hand.png" id="2_wkppk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8g6g4"]

[node name="EnchantmentLayoutCursor" type="Area2D"]
collision_layer = 2
collision_mask = 12
script = ExtResource("1_ip4lv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8g6g4")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(3.1284987e-06, 0.50850135, 0.38017425, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_wkppk")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
